# backend_guide_backup

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  INIT_PROJECT_STEPS.md  README.md  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
.github/actions/setup-machine/: action.yaml
.github/workflows/: cd.yaml  ci-backend.yaml  ci-docker.yaml
fronted/: package-lock.json
fronted/src/: App.css  App.jsx
fronted/src/components/: Layout.css  Layout.jsx  TodoCard.css  TodoCard.jsx
fronted/src/context/: AuthContext.jsx
fronted/src/hooks/: useTodos.js
fronted/src/pages/: AuthPages.css  LoginPage.jsx  RegisterPage.jsx  TodosPage.css  TodosPage.jsx
fronted/src/services/: api.js
src/: auth_utility.py  config.py  utils.py
src/db/: database.py  models.py
src/routers/: auth.py  todos.py
src/schemas/: todos.py  user.py
tests/: conftest.py  test_auth_utility.py  test_root.py
tests/routers/: test_auth.py  test_root.py  test_todos.py
