[project]
name = "backend-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "ty>=0.0.1a13",
    "pytest>=8.4.1",
    "pytest-pythonpath>=0.7.3",
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
]
